fix contrast buttons

--- a/style.css
+++ b/style.css
@@ -811,7 +811,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #f17941;
+    background: #A32C00;
     color: #FFFFFF !important;
 }
 
@@ -829,7 +829,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #f17941 !important;
+    color: #A32C00 !important;
 }
 
 .ltc-atomic-tangerine:hover {
